--- a/homepage/aboutEemShop.html
+++ b/homepage/aboutEemShop.html
@@ -53,13 +53,13 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="../shopSections/popularItems.html">Popular Items</a></li>
-                            <li><a class="dropdown-item" href="../shopSections/newArrivals.html">New Arrivals</a></li>
+                            <li><a class="dropdown-item" href="eemshop/shopSections/popularItems.html">Popular Items</a></li>
+                            <li><a class="dropdown-item" href="eemshop/shopSections/newArrivals.html">New Arrivals</a></li>
                         </ul>
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <a class="btn btn-outline-dark" href="../shopSections/cart.html">
+                    <a class="btn btn-outline-dark" href="eemshop/shopSections/cart.html">
                         <i class="bi-cart-fill me-1"></i>
                         Cart
                         <span id="cart-count" class="badge bg-dark text-white ms-1 rounded-pill">0</span>
