--- a/shopSections/newArrivals.html
+++ b/shopSections/newArrivals.html
@@ -43,18 +43,18 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../homepage/aboutEemShop.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="eemshop/homepage/aboutEemShop.html">About</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="../shopSections/popularItems.html">Popular Items</a></li>
-                            <li><a class="dropdown-item" href="../shopSections/newArrivals.html">New Arrivals</a></li>
+                            <li><a class="dropdown-item" href="eemshop/shopSections/popularItems.html">Popular Items</a></li>
+                            <li><a class="dropdown-item" href="eemshop/shopSections/newArrivals.html">New Arrivals</a></li>
                         </ul>
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <a class="btn btn-outline-dark" href="../shopSections/cart.html">
+                    <a class="btn btn-outline-dark" href="eemshop/shopSections/cart.html">
                         <i class="bi-cart-fill me-1"></i>
                         Cart
                         <span id="cart-count" class="badge bg-dark text-white ms-1 rounded-pill">0</span>
@@ -80,7 +80,7 @@
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->                              
-                                <a target="_blank" href='../shopitems/shopItem1.html'>
+                                <a target="_blank" href='eemshop/shopitems/shopItem1.html'>
                                     <span class="product-id" style="display: none;">1</span>
                                     <h5 class="fw-bolder product-name">"Melody of a Memory" Album Cover Poster</h5>    
                                     </a>
@@ -99,7 +99,7 @@
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <a target="_blank" href='../shopitems/shopItem6.html'>
+                                <a target="_blank" href='eemshop/shopitems/shopItem6.html'>
                                     <span class="product-id" style="display: none;">6</span>
                                     <h5 class="fw-bolder product-name">"STILL PRETTY" Album Cover Poster</h5>
                                     </a>
@@ -119,6 +119,6 @@
         <div class="container"><p class="m-0 text-center text-white">Copyright &copy; eem.shop 2025</p></div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../homepage/js/scriptsHomepage.js"></script>
+    <script src="eemshop/homepage/js/scriptsHomepage.js"></script>
 </body>
 </html>
