--- a/shopSections/popularItems.html
+++ b/shopSections/popularItems.html
@@ -46,18 +46,18 @@ header.bg-dark::before {
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../homepage/aboutEemShop.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="eemshop/homepage/aboutEemShop.html">About</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="../shopSections/popularItems.html">Popular Items</a></li>
-                            <li><a class="dropdown-item" href="../shopSections/newArrivals.html">New Arrivals</a></li>
+                            <li><a class="dropdown-item" href="eemshop/shopSections/popularItems.html">Popular Items</a></li>
+                            <li><a class="dropdown-item" href="eemshop/shopSections/newArrivals.html">New Arrivals</a></li>
                         </ul>
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <a class="btn btn-outline-dark" href="../shopSections/cart.html">
+                    <a class="btn btn-outline-dark" href="eemshop/shopSections/cart.html">
                         <i class="bi-cart-fill me-1"></i>
                         Cart
                         <span id="cart-count" class="badge bg-dark text-white ms-1 rounded-pill">0</span>
@@ -83,7 +83,7 @@ header.bg-dark::before {
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <a target="_blank" href='../shopitems/shopItem2.html'>
+                                <a target="_blank" href='eemshop/shopitems/shopItem2.html'>
                                 <span class="product-id" style="display: none;">2</span>
                                 <h5 class="fw-bolder product-name">"JUST FRIENDS?" Cover Poster</h5>
                                 </a>
@@ -110,7 +110,7 @@ header.bg-dark::before {
                         <img class="card-img-top" src="https://th.bing.com/th/id/OIP.cq6CXLI8TlKMYNCIGlcFLQHaHa?rs=1&pid=ImgDetMain" alt="..." />
                         <div class="card-body p-4">
                             <div class="text-center">
-                                <a target="_blank" href='../shopitems/shopItem4.html'>
+                                <a target="_blank" href='eemshop/shopitems/shopItem4.html'>
                                 <span class="product-id" style="display: none;">4</span>
                                 <h5 class="fw-bolder product-name">"Let You Know" Cover Poster</h5>
                                 </a>
@@ -136,7 +136,7 @@ header.bg-dark::before {
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                    <a target="_blank" href='../shopitems/shopItem7.html'>
+                                    <a target="_blank" href='eemshop/shopitems/shopItem7.html'>
                                     <span class="product-id" style="display: none;">7</span>
                                     <h5 class="fw-bolder product-name">"stephanie" Cover Poster</h5>
                                     </a>
@@ -164,7 +164,7 @@ header.bg-dark::before {
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <a target="_blank" href='../shopitems/shopItem8.html'>
+                                <a target="_blank" href='eemshop/shopitems/shopItem8.html'>
                                 <div class="product-id" style="display: none;">8</div>
                                 <h5 class="fw-bolder product-name">"CRAZY H*ES" Cover Poster</h5> 
                                 </a>
@@ -192,6 +192,6 @@ header.bg-dark::before {
         <div class="container"><p class="m-0 text-center text-white">Copyright &copy; eem.shop 2025</p></div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="../homepage/js/scriptsHomepage.js"></script>
+<script src="eemshop/homepage/js/scriptsHomepage.js"></script>
 </body>
 </html>
