--- a/shopitems/shopItem4.html
+++ b/shopitems/shopItem4.html
@@ -28,17 +28,17 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="eemshop/homepage/aboutEemShop.html">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../homepage/aboutEemShop.html">About</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="eemshop/shopSections/popularItems.html">Popular Items</a></li>
-                                <li><a class="dropdown-item" href="eemshop/shopSections/newArrivals.html">New Arrivals</a></li>
+                                <li><a class="dropdown-item" href="../shopSections/popularItems.html">Popular Items</a></li>
+                                <li><a class="dropdown-item" href="../shopSections/newArrivals.html">New Arrivals</a></li>
                             </ul>
                         </li>
                     </ul>
                     <form class="d-flex">
-                        <a class="btn btn-outline-dark" href="eemshop/shopSections/cart.html">
+                        <a class="btn btn-outline-dark" href="../shopSections/cart.html">
                             <i class="bi-cart-fill me-1"></i>
                             Cart
                             <span id="cart-count" class="badge bg-dark text-white ms-1 rounded-pill">0</span>
@@ -91,7 +91,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->                              
-                                    <a target="_blank" href='eemshop/shopitems/shopItem1.html'>
+                                    <a target="_blank" href='../shopitems/shopItem1.html'>
                                     <span class="product-id" style="display: none;">1</span>
                                     <h5 class="fw-bolder product-name">"Melody of a Memory" Album Cover Poster</h5>    
                                     </a>
@@ -115,7 +115,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <a target="_blank" href='eemshop/shopitems/shopItem7.html'>
+                                    <a target="_blank" href='../shopitems/shopItem7.html'>
                                     <span class="product-id" style="display: none;">7</span>
                                     <h5 class="fw-bolder product-name">"stephanie" Cover Poster</h5>
                                     </a>
@@ -148,7 +148,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <a target="_blank" href='eemshop/shopitems/shopItem3.html'>
+                                    <a target="_blank" href='../shopitems/shopItem3.html'>
                                     <span class="product-id" style="display: none;">3</span>
                                     <h5 class="fw-bolder product-name">"N0wh3r3" Album Cover Poster</h5>
                                     </a>
@@ -171,7 +171,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <a target="_blank" href='eemshop/shopitems/shopItem8.html'>
+                                    <a target="_blank" href='../shopitems/shopItem8.html'>
                                     <div class="product-id" style="display: none;">8</div>
                                     <h5 class="fw-bolder product-name">"CRAZY H*ES" Cover Poster</h5> 
                                     </a>
@@ -203,6 +203,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="eemshop/homepage/js/scriptshomepage.js"></script>
+        <script src="../homepage/js/scriptshomepage.js"></script>
     </body>
 </html>
