--- a/shopitems/shopItem6.html
+++ b/shopitems/shopItem6.html
@@ -28,17 +28,17 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="eemshop/homepage/aboutEemShop.html">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../homepage/aboutEemShop.html">About</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="eemshop/shopSections/popularItems.html">Popular Items</a></li>
-                                <li><a class="dropdown-item" href="eemshop/shopSections/newArrivals.html">New Arrivals</a></li>
+                                <li><a class="dropdown-item" href="../shopSections/popularItems.html">Popular Items</a></li>
+                                <li><a class="dropdown-item" href="../shopSections/newArrivals.html">New Arrivals</a></li>
                             </ul>
                         </li>
                     </ul>
                     <form class="d-flex">
-                        <a class="btn btn-outline-dark" href="eemshop/shopSections/cart.html">
+                        <a class="btn btn-outline-dark" href="../shopSections/cart.html">
                             <i class="bi-cart-fill me-1"></i>
                             Cart
                             <span id="cart-count" class="badge bg-dark text-white ms-1 rounded-pill">0</span>
@@ -88,7 +88,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <a target="_blank" href='eemshop/shopitems/shopItem1.html'>
+                                    <a target="_blank" href='../shopitems/shopItem1.html'>
                                     <h5 class="fw-bolder" >"Melody of a Memory" Album Cover Poster</h5>
                                     <!-- Product price-->
                                     $80.00
@@ -110,7 +110,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <a target="_blank" href='eemshop/shopitems/shopItem7.html'>
+                                    <a target="_blank" href='../shopitems/shopItem7.html'>
                                     <span class="product-id" style="display: none;">7</span>
                                     <h5 class="fw-bolder product-name">"stephanie" Cover Poster</h5>
                                     </a>
@@ -143,7 +143,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <a target="_blank" href='eemshop/shopitems/shopItem5.html'>
+                                    <a target="_blank" href='../shopitems/shopItem5.html'>
                                     <span class="product-id" style="display: none;">5</span>
                                     <h5 class="fw-bolder product-name">"TELL ME IM RIGHT" Cover Poster</h5>
                                     </a>
@@ -166,7 +166,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <a target="_blank" href='eemshop/shopitems/shopItem4.html'>
+                                    <a target="_blank" href='../shopitems/shopItem4.html'>
                                     <span class="product-id" style="display: none;">4</span>
                                     <h5 class="fw-bolder product-name">"Let You Know" Cover Poster</h5>
                                     </a>
@@ -198,6 +198,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="eemshop/homepage/js/scriptshomepage.js"></script>
+        <script src="../homepage/js/scriptshomepage.js"></script>
     </body>
 </html>
