--- a/homepage/aboutEemShop.html
+++ b/homepage/aboutEemShop.html
@@ -49,17 +49,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../homepage/aboutEemShop.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./homepage/aboutEemShop.html">About</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="../shopSections/popularItems.html">Popular Items</a></li>
-                            <li><a class="dropdown-item" href="../shopSections/newArrivals.html">New Arrivals</a></li>
+                            <li><a class="dropdown-item" href="./shopSections/popularItems.html">Popular Items</a></li>
+                            <li><a class="dropdown-item" href="./shopSections/newArrivals.html">New Arrivals</a></li>
                         </ul>
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <a class="btn btn-outline-dark" href="../shopSections/cart.html">
+                    <a class="btn btn-outline-dark" href="./shopSections/cart.html">
                         <i class="bi-cart-fill me-1"></i>
                         Cart
                         <span id="cart-count" class="badge bg-dark text-white ms-1 rounded-pill">0</span>
@@ -111,6 +111,6 @@
     <!-- Bootstrap core JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS -->
-    <script src="../homepage/js/scriptsHomepage.js"></script>
+    <script src="./homepage/js/scriptsHomepage.js"></script>
 </body>
 </html>
