--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../homepage/aboutEemShop.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./homepage/aboutEemShop.html">About</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="../shopSections/popularItems.html">Popular Items</a></li>
-                            <li><a class="dropdown-item" href="../shopSections/newArrivals.html">New Arrivals</a></li>
+                            <li><a class="dropdown-item" href="./shopSections/popularItems.html">Popular Items</a></li>
+                            <li><a class="dropdown-item" href="./shopSections/newArrivals.html">New Arrivals</a></li>
                         </ul>
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <a class="btn btn-outline-dark" href="../shopSections/cart.html">
+                    <a class="btn btn-outline-dark" href="./shopSections/cart.html">
                         <i class="bi-cart-fill me-1"></i>
                         Cart
                         <span id="cart-count" class="badge bg-dark text-white ms-1 rounded-pill">0</span>
@@ -91,7 +91,7 @@
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->                              
-                                <a target="_blank" href='../shopitems/shopItem1.html'>
+                                <a target="_blank" href='./shopitems/shopItem1.html'>
                                 <span class="product-id" style="display: none;">1</span>
                                 <h5 class="fw-bolder product-name">"Melody of a Memory" Album Cover Poster</h5>    
                                 </a>
@@ -115,7 +115,7 @@
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <a target="_blank" href='../shopitems/shopItem2.html'>
+                                <a target="_blank" href='./shopitems/shopItem2.html'>
                                 <span class="product-id" style="display: none;">2</span>
                                 <h5 class="fw-bolder product-name">"JUST FRIENDS?" Cover Poster</h5>
                                 </a>
@@ -149,7 +149,7 @@
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <a target="_blank" href='../shopitems/shopItem3.html'>
+                                <a target="_blank" href='./shopitems/shopItem3.html'>
                                 <span class="product-id" style="display: none;">3</span>
                                 <h5 class="fw-bolder product-name">"N0wh3r3" Album Cover Poster</h5>
                                 </a>
@@ -172,7 +172,7 @@
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <a target="_blank" href='../shopitems/shopItem4.html'>
+                                <a target="_blank" href='./shopitems/shopItem4.html'>
                                 <span class="product-id" style="display: none;">4</span>
                                 <h5 class="fw-bolder product-name">"Let You Know" Cover Poster</h5>
                                 </a>
@@ -204,7 +204,7 @@
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <a target="_blank" href='../shopitems/shopItem5.html'>
+                                <a target="_blank" href='./shopitems/shopItem5.html'>
                                 <span class="product-id" style="display: none;">5</span>
                                 <h5 class="fw-bolder product-name">"TELL ME IM RIGHT" Cover Poster</h5>
                                 </a>
@@ -229,7 +229,7 @@
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <a target="_blank" href='../shopitems/shopItem6.html'>
+                                <a target="_blank" href='./shopitems/shopItem6.html'>
                                 <span class="product-id" style="display: none;">6</span>
                                 <h5 class="fw-bolder product-name">"STILL PRETTY" Album Cover Poster</h5>
                                 </a>
@@ -253,7 +253,7 @@
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <a target="_blank" href='../shopitems/shopItem7.html'>
+                                <a target="_blank" href='./shopitems/shopItem7.html'>
                                 <span class="product-id" style="display: none;">7</span>
                                 <h5 class="fw-bolder product-name">"stephanie" Cover Poster</h5>
                                 </a>
@@ -285,7 +285,7 @@
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <a target="_blank" href='../shopitems/shopItem8.html'>
+                                <a target="_blank" href='./shopitems/shopItem8.html'>
                                 <div class="product-id" style="display: none;">8</div>
                                 <h5 class="fw-bolder product-name">"CRAZY H*ES" Cover Poster</h5> 
                                 </a>
@@ -318,6 +318,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
 <script src="js/scriptsHomepage.js"></script>
-<script src="../shopSections/js/cartScript.js"></script>
+<script src="./shopSections/js/cartScript.js"></script>
 </body>
 </html>
