--- a/index.html
+++ b/index.html
@@ -318,6 +318,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
 <script src="js/scriptsHomepage.js"></script>
-<script src="./shopSections/js/cartScript.js"></script>
+<script src="../shopSections/js/cartScript.js"></script>
 </body>
 </html>
