--- a/shopitems/shopItem4.html
+++ b/shopitems/shopItem4.html
@@ -203,6 +203,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="homepage/js/scriptshomepage.js"></script>
+        <script src="./homepage/js/scriptshomepage.js"></script>
     </body>
 </html>
