--- a/shopSections/newArrivals.html
+++ b/shopSections/newArrivals.html
@@ -119,6 +119,6 @@
         <div class="container"><p class="m-0 text-center text-white">Copyright &copy; eem.shop 2025</p></div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./homepage/js/scriptsHomepage.js"></script>
+    <script src="homepage/js/scriptsHomepage.js"></script>
 </body>
 </html>
