--- a/shopSections/cart.html
+++ b/shopSections/cart.html
@@ -115,6 +115,6 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../shopSections/js/cartScript.js"></script>
-    <script src="homepage/js/scriptsHomepage.js"></script>
+    <script src="../scriptsHomepage.js"></script>
 </body>
 </html>
