--- a/index.html
+++ b/index.html
@@ -317,7 +317,6 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-<script src="js/scriptsHomepage.js"></script>
-<script src="../shopSections/js/cartScript.js"></script>
+<script src="./scriptsHomepage.js"></script>
 </body>
 </html>
